--- a/src/styles/MainNav.module.css
+++ b/src/styles/MainNav.module.css
@@ -36,10 +36,9 @@
   }
 }
 
-
 .NavLink {
   margin: 0 1.6rem;
-  color: #fff;
+  color: #fff !important;
 }
 
 .NavLinkActive {
